Added learn more with donate

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,5 +124,6 @@
 
 
 .emoji-flag {
-  font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;
+  font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif !important;
+  font-style: normal !important;
 }
